Fixed errors in LandingPage and History. And changed some code to be clean